--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
         <h2 style="text-align:center">Portfolio</h2>
           <h3>Abstract Red</h3>
           <img src="images/abstract-red.png" alt="Abstract Red">
-          <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
+          <p style="text-align:center">Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
              waistcoat scenester hell of.</p>
         </div>
 
         <div>
           <h3>Spiral Zany</h3>
           <img src="images/spiral-zany.png" alt="Spiral Zany">
-          <p>Sriracha portland taxidermy cronut messenger bag, vegan
+          <p style="text-align:center">Sriracha portland taxidermy cronut messenger bag, vegan
              distillery. Vaporware kickstarter air plant mumblecore food truck.</p>
         </div>
 
         <div>
           <h3>Melted Rainbow</h3>
           <img src="images/melted-rainbow.png" alt="Melted Rainbow">
-          <p>Edison bulb single-origin coffee snackwave, actually ennui
+          <p style="text-align:center">Edison bulb single-origin coffee snackwave, actually ennui
              locavore shabby chic forage.</p>
         </div>
       </article>
